[gd_scene load_steps=22 format=3 uid="uid://bkm4i5405grrr"]

[ext_resource type="Script" path="res://ui/UI.gd" id="1_bsom3"]
[ext_resource type="Script" path="res://ui/CodeEditor.gd" id="1_gixgk"]
[ext_resource type="Script" path="res://ui/AgentCreator.gd" id="3_kmffy"]
[ext_resource type="Script" path="res://OutputConsole.gd" id="4_rw6m0"]
[ext_resource type="Script" path="res://ui/Settings.gd" id="4_ss325"]
[ext_resource type="Script" path="res://ui/Tooltips.gd" id="5_fyncs"]
[ext_resource type="Script" path="res://ui/AgentPanel.gd" id="7_bp5wl"]
[ext_resource type="Script" path="res://ui/Ranking.gd" id="7_dgc1q"]
[ext_resource type="AudioStream" uid="uid://dwhe2pfkl4no8" path="res://assets/Music/button_press.wav" id="7_e7dui"]
[ext_resource type="Script" path="res://ui/ResourcesPanel.gd" id="9_psibt"]
[ext_resource type="Texture2D" uid="uid://bdsohiu75t4dy" path="res://assets/HAS/Buildings/HAS Buildings Pack/Resources/Wood.png" id="10_hp6ei"]
[ext_resource type="Texture2D" uid="uid://dta8l3txsdm3m" path="res://assets/HAS/Buildings/HAS Overworld Starter Pack/SP-Mountains.png" id="11_ij3yt"]
[ext_resource type="Shader" path="res://addons/lynx_nodes/utils/shaders/ui.gdshader" id="12_k773e"]
[ext_resource type="Script" path="res://ui/Login.gd" id="12_kpqfr"]
[ext_resource type="Script" path="res://ui/AgentList/AgentList.gd" id="15_ronof"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_2lklk"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_87dip"]

[sub_resource type="LabelSettings" id="LabelSettings_fkh4e"]
font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_rfq13"]
atlas = ExtResource("11_ij3yt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrg1v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h7sej"]
shader = ExtResource("12_k773e")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = -4.0
offset_right = 1283.0
offset_bottom = 717.0
script = ExtResource("1_bsom3")

[node name="AgentCreatorToggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = 29.0
grow_horizontal = 0
toggle_mode = true
text = "Open/Close Agent Creator"

[node name="AgentCreator" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1279.0
offset_bottom = -721.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_kmffy")

[node name="CodeEditor" type="CodeEdit" parent="AgentCreator"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 359.0
offset_right = 947.0
offset_bottom = 726.0
grow_horizontal = 2
grow_vertical = 0
highlight_current_line = true
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_2lklk")
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_gixgk")

[node name="CreateAgent" type="Button" parent="AgentCreator"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1146.0
offset_top = 296.0
offset_right = 1280.0
offset_bottom = 327.0
grow_horizontal = 0
grow_vertical = 2
text = "Create Agent"

[node name="XInput" type="LineEdit" parent="AgentCreator"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1145.94
offset_top = 327.5
offset_right = 1213.0
offset_bottom = 358.5
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "X"

[node name="YInput" type="LineEdit" parent="AgentCreator"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1212.94
offset_top = 327.5
offset_right = 1280.0
offset_bottom = 358.5
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Y"

[node name="Generate" type="Button" parent="AgentCreator"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1146.0
offset_top = 232.0
offset_right = 1280.0
offset_bottom = 263.0
grow_horizontal = 0
grow_vertical = 2
text = "Generate"

[node name="GenerateDebug" type="Button" parent="AgentCreator"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1146.0
offset_top = 264.0
offset_right = 1280.0
offset_bottom = 295.0
grow_horizontal = 0
grow_vertical = 2
text = "Generate Debug
"

[node name="ColorRect" type="ColorRect" parent="AgentCreator"]
layout_mode = 0
offset_left = 947.0
offset_top = 359.0
offset_right = 1281.0
offset_bottom = 727.0
color = Color(0.156863, 0.164706, 0.211765, 1)

[node name="OutputConsole" type="RichTextLabel" parent="AgentCreator/ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 327.0
offset_bottom = 358.0
script = ExtResource("4_rw6m0")

[node name="CreateAgentWarningDialog" type="AcceptDialog" parent="AgentCreator"]
title = "Warning"
initial_position = 1
size = Vector2i(404, 100)

[node name="Settings" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ss325")

[node name="SettingsPanel" type="Panel" parent="Settings"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -20.0
offset_right = 1258.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/SettingsPanel"]
layout_mode = 0
offset_left = 488.0
offset_top = 355.0
offset_right = 788.0
offset_bottom = 435.0

[node name="AddressLabel" type="Label" parent="Settings/SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Server address:"

[node name="AddressTextEdit" type="TextEdit" parent="Settings/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="Settings/SettingsPanel"]
layout_mode = 0
offset_left = 900.0
offset_top = 597.0
offset_right = 944.0
offset_bottom = 628.0
text = "Save"

[node name="SettingsButton" type="Button" parent="Settings"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 31.0
toggle_mode = true
text = "Settings"

[node name="Tooltips" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_fyncs")

[node name="TileData" type="VBoxContainer" parent="Tooltips"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Position" type="Label" parent="Tooltips/TileData"]
layout_mode = 2

[node name="Type" type="Label" parent="Tooltips/TileData"]
layout_mode = 2

[node name="ObjectCounts" type="VBoxContainer" parent="Tooltips/TileData"]
layout_mode = 2

[node name="AgentPanel" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_bp5wl")

[node name="AgentPanel" type="Panel" parent="AgentPanel"]
self_modulate = Color(0.211765, 0.203922, 0.156863, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 314.0
offset_top = -19.0
offset_right = 1050.0
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeleteButton" type="Button" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 29.0
offset_right = 63.0
offset_bottom = 60.0
text = "Delete"

[node name="FollowButton" type="Button" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 69.0
offset_top = 29.0
offset_right = 128.0
offset_bottom = 60.0
text = "Follow"

[node name="UnfollowButton" type="Button" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 136.0
offset_top = 29.0
offset_right = 214.0
offset_bottom = 60.0
text = "Unfollow"

[node name="AgentId" type="VBoxContainer" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 142.0
offset_bottom = 27.0

[node name="AgentIdLabel" type="Label" parent="AgentPanel/AgentPanel/AgentId"]
layout_mode = 2
text = "Agent: "

[node name="AgentCodeLabel" type="Label" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 371.0
offset_top = 11.0
offset_right = 474.0
offset_bottom = 37.0
text = "Agent's code:"

[node name="AgentCode" type="CodeEdit" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 372.0
offset_top = 36.0
offset_right = 735.0
offset_bottom = 349.0
editable = false
highlight_current_line = true
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_87dip")
script = ExtResource("1_gixgk")

[node name="AgentInventory" type="ColorRect" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = 231.0
offset_right = 372.0
offset_bottom = 350.0
color = Color(0.211765, 0.203922, 0.156863, 1)

[node name="Label" type="Label" parent="AgentPanel/AgentPanel/AgentInventory"]
layout_mode = 0
offset_left = 2.0
offset_top = 9.0
offset_right = 142.0
offset_bottom = 35.0
text = "Agent's inventory:"

[node name="Text" type="RichTextLabel" parent="AgentPanel/AgentPanel/AgentInventory"]
layout_mode = 0
offset_left = 2.0
offset_top = 35.0
offset_right = 370.0
offset_bottom = 118.0
text = "
"

[node name="AgentInformation" type="RichTextLabel" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 63.0
offset_right = 368.0
offset_bottom = 137.0

[node name="AgentPerformance" type="ColorRect" parent="AgentPanel/AgentPanel"]
layout_mode = 0
offset_top = 142.0
offset_right = 372.0
offset_bottom = 231.0
color = Color(0.211765, 0.203922, 0.156863, 1)

[node name="Label" type="Label" parent="AgentPanel/AgentPanel/AgentPerformance"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 164.0
offset_bottom = 28.0
text = "Agent's performance"

[node name="Text" type="RichTextLabel" parent="AgentPanel/AgentPanel/AgentPerformance"]
layout_mode = 0
offset_left = 2.0
offset_top = 29.0
offset_right = 369.0
offset_bottom = 94.0

[node name="Ranking" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_dgc1q")

[node name="RankingPanel" type="Panel" parent="Ranking"]
visible = false
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -20.0
offset_right = 1258.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2

[node name="RankingLabel" type="Label" parent="Ranking/RankingPanel"]
layout_mode = 2
offset_left = 12.0
offset_top = 44.0
offset_right = 136.0
offset_bottom = 92.0
text = "Ranking"
label_settings = SubResource("LabelSettings_fkh4e")

[node name="RankingList" type="ItemList" parent="Ranking/RankingPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 94.0
offset_right = 1269.0
offset_bottom = 707.0

[node name="RankingButton" type="Button" parent="Ranking"]
layout_mode = 0
offset_left = 73.0
offset_right = 144.0
offset_bottom = 31.0
toggle_mode = true
text = "Ranking"

[node name="ResourcesPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.118
anchor_right = 0.118
offset_left = 111.078
offset_right = 181.078
offset_bottom = 29.0
script = ExtResource("9_psibt")

[node name="ResourcesContainer" type="HBoxContainer" parent="ResourcesPanel"]
layout_mode = 2

[node name="Wood" type="HBoxContainer" parent="ResourcesPanel/ResourcesContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Icon" type="TextureRect" parent="ResourcesPanel/ResourcesContainer/Wood"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_hp6ei")
stretch_mode = 3

[node name="ItemCount" type="Label" parent="ResourcesPanel/ResourcesContainer/Wood"]
layout_mode = 2
text = "0"
vertical_alignment = 2

[node name="Stone" type="HBoxContainer" parent="ResourcesPanel/ResourcesContainer"]
layout_mode = 2
alignment = 1

[node name="Icon" type="TextureRect" parent="ResourcesPanel/ResourcesContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_rfq13")
stretch_mode = 3

[node name="ItemCount" type="Label" parent="ResourcesPanel/ResourcesContainer/Stone"]
layout_mode = 2
text = "0"
vertical_alignment = 2

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_e7dui")
volume_db = -20.155

[node name="Agents" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_ronof")

[node name="AgentPanel" type="Panel" parent="Agents"]
visible = false
self_modulate = Color(0.211765, 0.239216, 0.290196, 1)
material = SubResource("ShaderMaterial_xrg1v")
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 14.0
offset_right = 312.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2

[node name="AgentsRatio" type="RichTextLabel" parent="Agents/AgentPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 223.0
offset_bottom = 26.0

[node name="SlotCost" type="RichTextLabel" parent="Agents/AgentPanel"]
layout_mode = 0
offset_top = 60.0
offset_right = 328.0
offset_bottom = 87.0

[node name="ScrollContainer" type="ScrollContainer" parent="Agents/AgentPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 90.0
offset_right = 328.0
offset_bottom = 183.0

[node name="AgentListContainer" type="VBoxContainer" parent="Agents/AgentPanel/ScrollContainer"]
layout_mode = 2

[node name="BuySlotButton" type="Button" parent="Agents/AgentPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 27.0
offset_right = 72.0
offset_bottom = 58.0
text = "Buy slot"

[node name="AgentsButton" type="Button" parent="Agents"]
layout_mode = 0
offset_left = 148.0
offset_right = 219.0
offset_bottom = 31.0
toggle_mode = true
text = "Agents"

[node name="Communication" type="AcceptDialog" parent="Agents"]

[node name="LoginScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_kpqfr")

[node name="Panel" type="Panel" parent="LoginScreen"]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_h7sej")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -20.0
offset_right = 1272.0
offset_bottom = 712.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginScreen/Panel"]
layout_mode = 0
offset_left = 413.0
offset_top = 271.0
offset_right = 888.0
offset_bottom = 376.0

[node name="UsernameLabel" type="Label" parent="LoginScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Username:"

[node name="UsernameTextEdit" type="TextEdit" parent="LoginScreen/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter your name"

[node name="LoginButton" type="Button" parent="LoginScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="PopupError" type="PopupPanel" parent="LoginScreen/Panel"]
size = Vector2i(260, 40)

[node name="ErrorMessage" type="Label" parent="LoginScreen/Panel/PopupError"]
offset_left = 4.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 36.0
text = "Please enter your username!"
horizontal_alignment = 1

[connection signal="button_up" from="AgentCreatorToggle" to="." method="_on_agent_creator_toggle_button_up"]
[connection signal="mouse_entered" from="AgentCreatorToggle" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreatorToggle" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="AgentCreatorToggle" to="AgentCreator" method="_on_agent_creator_toggle_toggled"]
[connection signal="mouse_entered" from="AgentCreator/CodeEditor" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/CodeEditor" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="AgentCreator/CreateAgent" to="." method="_on_create_agent_button_up"]
[connection signal="mouse_entered" from="AgentCreator/CreateAgent" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/CreateAgent" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AgentCreator/XInput" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/XInput" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AgentCreator/YInput" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/YInput" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="AgentCreator/Generate" to="." method="_on_generate_button_up"]
[connection signal="mouse_entered" from="AgentCreator/Generate" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/Generate" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="AgentCreator/GenerateDebug" to="." method="_on_generate_debug_button_up"]
[connection signal="mouse_entered" from="AgentCreator/GenerateDebug" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/GenerateDebug" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AgentCreator/ColorRect/OutputConsole" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AgentCreator/ColorRect/OutputConsole" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="Settings/SettingsPanel/SaveButton" to="Settings" method="_on_save_button_button_up"]
[connection signal="button_up" from="Settings/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="mouse_entered" from="Settings/SettingsButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Settings/SettingsButton" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="Settings/SettingsButton" to="Settings" method="_on_settings_button_toggled"]
[connection signal="button_up" from="AgentPanel/AgentPanel/DeleteButton" to="." method="_on_delete_agent_button_up"]
[connection signal="pressed" from="AgentPanel/AgentPanel/FollowButton" to="AgentPanel" method="_on_follow_button_pressed"]
[connection signal="pressed" from="AgentPanel/AgentPanel/UnfollowButton" to="AgentPanel" method="_on_unfollow_button_pressed"]
[connection signal="button_up" from="Ranking/RankingButton" to="." method="_on_ranking_button_button_up"]
[connection signal="mouse_entered" from="Ranking/RankingButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Ranking/RankingButton" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="Ranking/RankingButton" to="Ranking" method="_on_ranking_button_toggled"]
[connection signal="pressed" from="Agents/AgentPanel/BuySlotButton" to="Agents" method="_on_buy_slot_button_pressed"]
[connection signal="mouse_entered" from="Agents/AgentsButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Agents/AgentsButton" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="Agents/AgentsButton" to="Agents" method="_on_agents_button_toggled"]
[connection signal="button_up" from="LoginScreen/Panel/VBoxContainer/LoginButton" to="LoginScreen" method="_on_login_button_button_up"]
